# exMs

./: CMakeLists.txt  LICENSE  README.md  build.bat  build.ps1  build_debug.bat  build_simple.bat  exms.toml
apps/demo_echo/: README.md  main.cpp
apps/elf_test/: main.cpp
apps/stress_test/: main.cpp
boot/exboot/: README.md  main.cpp
compat/linux/: README.md
compat/linux/elf/: README.md  TODO.md  elf_loader.cpp  elf_loader.hpp
compat/linux/fsview/: README.md
compat/linux/procfs/: README.md
compat/linux/syscall/: README.md  TODO.md  dispatcher.cpp  dispatcher.hpp
core/exabi/: README.md
core/exabi/include/: exabi.hpp
core/exabi/src/: exabi.cpp
core/exloader/: README.md
core/exloader/include/: exloader.hpp
core/exloader/src/: exloader.cpp
core/expdmf/: README.md
core/expdmf/include/: expdmf.hpp
core/expdmf/src/: expdmf.cpp
core/expfc/: README.md
core/expfc/include/: expfc.hpp
core/expfc/src/: expfc.cpp
core/exsvc/: README.md
core/exsvc/include/: exsvc.hpp
core/exsvc/src/: exsvc.cpp
docs/: Claude_下一步任务单.md  Claude_接手说明.md  architecture.md  exMs_技术白皮书.md  exMs_技术白皮书_目录版.md  module_contracts.md  package_formats.md  pdmf.md  pfc.md  qemu_testing.md  roadmap_short.md
pkg/: README.md
pkg/manifests/: sample.exmapp.json  sample.exmdll.json  sample.exmsys.json
runtime/: runtime.cpp  runtime.hpp
runtime/event/: README.md  event.cpp  event.hpp
runtime/fd/: README.md  fd.cpp  fd.hpp
runtime/log/: log.hpp
runtime/mem/: README.md  mem.cpp  mem.hpp
runtime/proc/: README.md  proc.cpp  proc.hpp
runtime/shm/: README.md  shm.cpp  shm.hpp
tests/abi/: README.md  smoke_test.md
tests/elf/: README.md  smoke_test.md
tests/pdmf/: README.md  test_plan.md
tests/pfc/: README.md  test_plan.md
tools/: build.py  build_exms_winpe.py  dev.ps1  qemu_pe_test.py  run.ps1  test_qemu_dktm.py  test_qemu_exms.py  test_qemu_simple.py  test_qemu_vhd.py  tree.txt
